fix/fix align-items values

--- a/main.css
+++ b/main.css
@@ -325,12 +325,14 @@ body {
       height: 30px; } }
   .nav__searchBar--none {
     display: none; }
-    .nav__searchBar--none:checked + nav__searchBar--block {
+    .nav__searchBar--none:checked + .nav__searchBar--block {
       transform: scaleX(1); }
   .nav__searchBar--block {
     display: block;
-    margin: 1.5rem auto;
-    padding: 0.75rem 1.5rem;
+    text-align: center;
+    margin: 1em auto 0;
+    padding: 0 1.5rem;
+    height: 3em;
     border-radius: 99em;
     box-shadow: inset 0 0 10px var(--input-description);
     transform-origin: left;
@@ -341,13 +343,16 @@ body {
       color: black; }
     @media (min-width: 769px) {
       .nav__searchBar--block {
+        margin: 0;
         position: absolute;
         transform-origin: center;
-        top: 50%;
+        top: 100%;
         right: 0; } }
-    @media (min-width: 1201px) {
+    @media (min-width: 1301px) {
       .nav__searchBar--block {
-        right: calc(12% + 16px);
+        top: 1em;
+        bottom: 1em;
+        right: calc(12% + 1em);
         margin: 0;
         transform-origin: right; } }
 
@@ -637,10 +642,10 @@ body {
         justify-content: space-between;
         width: max-content;
         flex-direction: column;
-        align-items: end; }
+        align-items: flex-end; }
         @media (min-width: 993px) {
           .cart__item-info-container {
-            align-items: start; } }
+            align-items: flex-start; } }
       .cart__item-info--name {
         margin-bottom: 18px; }
       .cart__item-info--buttons {
@@ -731,7 +736,7 @@ body {
   .footer__container {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     padding: 64px 0; }
   .footer__logo {
     align-self: center;
