--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -545,9 +545,9 @@ body {
         justify-content: space-between;
         width: max-content;
         flex-direction: column;
-        align-items: end;
+        align-items: flex-end;
         @include lg {
-          align-items: start;
+          align-items: flex-start;
         }
       }
       &--name {
@@ -662,7 +662,7 @@ body {
   &__container {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     padding: 64px 0;
   }
   &__logo {
